fix: fix content alignment and asset update

--- a/assets/app.css
+++ b/assets/app.css
@@ -705,6 +705,10 @@ video {
   margin-top: 1rem;
 }
 
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .block {
   display: block;
 }
@@ -779,6 +783,10 @@ video {
 
 .h-auto {
   height: auto;
+}
+
+.h-0 {
+  height: 0px;
 }
 
 .max-h-56 {
@@ -962,10 +970,22 @@ video {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
+.bg-gray-grid {
+  background-image: url('https://cdn.shopify.com/s/files/1/0231/7366/0752/files/SFONDO.jpg?v=1722958903');
+}
+
 .from-white {
   --tw-gradient-from: #fff var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.bg-s-gray-grid {
+  background-size: 720px;
+}
+
+.bg-repeat {
+  background-repeat: repeat;
 }
 
 .object-contain {
@@ -1010,6 +1030,16 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .pb-16 {
@@ -1247,6 +1277,10 @@ video {
     margin-top: 0.75rem;
   }
 
+  .md\:block {
+    display: block;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -1266,6 +1300,10 @@ video {
   .md\:h-max {
     height: -moz-max-content;
     height: max-content;
+  }
+
+  .md\:h-auto {
+    height: auto;
   }
 
   .md\:max-h-none {
